Tricky Questions added

--- a/Tricky Questions/Basics Questions.ipynb
+++ b/Tricky Questions/Basics Questions.ipynb
@@ -130,7 +130,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": ""
+     "languageId": "java"
     }
    },
    "outputs": [],
@@ -248,7 +248,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": ""
+     "languageId": "java"
     }
    },
    "outputs": [],
@@ -780,7 +780,7 @@
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": ""
+     "languageId": "java"
     }
    },
    "outputs": [],
@@ -1062,7 +1062,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 14) What will happen if we try to compile and run this?"
+    "# 24) What will happen if we try to compile and run this?"
    ]
   },
   {
@@ -1088,6 +1088,277 @@
    "metadata": {},
    "source": [
     "Explanation: The program will compile and run successfully. Does not matter the Test class is empty."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 25) In double brace initialization what is the meaning of first and second pair of braces?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class TestHashMap {  \n",
+    "    public static void main(String[] args) {  \n",
+    "        HashMap<String,String> map = new HashMap<String,String>(){  \n",
+    "        {  \n",
+    "            put(\"1\", \"ONE\");  \n",
+    "        }{  \n",
+    "            put(\"2\", \"TWO\");  \n",
+    "        }{  \n",
+    "            put(\"3\", \"THREE\");  \n",
+    "        }  \n",
+    "        };  \n",
+    "        Set<String> keySet = map.keySet();  \n",
+    "        for (String string : keySet) {  \n",
+    "            System.out.println(string+\" ->\"+map.get(string));  \n",
+    "        }  \n",
+    "    }  \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ->ONE\n",
+      "2 ->TWO\n",
+      "3 ->THREE\n"
+     ]
+    }
+   ],
+   "source": [
+    "TestHashMap a = new TestHashMap();\n",
+    "a.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation: First brace creates a new Anonymous Inner Class. These inner classes are capable of accessing the behavior of their parent class. So, in our case, we are actually creating a subclass of HashSet class, so this inner class is capable of using put() method.\n",
+    "\n",
+    "And Second set of braces are nothing but instance initializers. Recall the concept of core Java where we can easily associate instance initializer blocks with static initializers due to similar brace like struct. Only difference is that static initializer is added with static keyword, and is run only once; no matter how many objects we create.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 26) Which of the following statement runs infinitely?\n",
+    "\n",
+    "* i. for( ; ; )\n",
+    "* ii. for( ; true; )\n",
+    "* iii. for( ; false; )\n",
+    "* iv. for( ; 2==2; )\n",
+    "* v. for(int i=1; i>=1; i++)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation: The loops i, ii, iv, and v runs infinitely because the first for loop by default picks true value at condition place, the second for loop specifies that the condition is true, the fourth for loop compares the values and returns true, the fifth for loop also returns true at each iteration. Therefore, the for loop i, ii, iv, and v runs infinitely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 27) Consider the following program.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class Block  \n",
+    "{    \n",
+    "static  \n",
+    "{  \n",
+    "System.out.println(\"Static Block-1\");  \n",
+    "}    \n",
+    "public static void main(String args[])  \n",
+    "{    \n",
+    "System.out.println(\"Main Method\");    \n",
+    "}    \n",
+    "static  \n",
+    "{  \n",
+    "System.out.println(\"Static Block-2\");  \n",
+    "}   \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Static Block-1, Static Block-2, Main Method\n",
+    "\n",
+    "Explanation: If a Java program have both static blocks and main() method, in such a case all the static block will execute first then the main() method. Therefore, option A is correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 28) Consider the following program.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.Arrays;  \n",
+    "public class SplitString  \n",
+    "{  \n",
+    "public static void main(String args[])   \n",
+    "{  \n",
+    "String str=\"Java|Python|Hadoop\";  \n",
+    "String[] array = str.split(\"\\\\|\");  \n",
+    "System.out.println(Arrays.toString(array));  \n",
+    "}  \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Java, Python, Hadoop]\n"
+     ]
+    }
+   ],
+   "source": [
+    "SplitString a = new SplitString();\n",
+    "a.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation: The String.split() method splits the string with the specified delimiter (|). The following statement also does the same.\n",
+    "\n",
+    "String[] array = str.split(Pattern.quote(\"|\"));   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 29) Consider the scenario.\n",
+    "\n",
+    "If we put System.exit(0) on try or catch block in such a case Will finally block execute or not? Also specify the reason.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation: By Calling System.exit(0) in try or catch block, we can skip the finally block. System.exit(int) method can throw a SecurityException.\n",
+    "\n",
+    "If System.exit(0) exits the JVM without throwing the exception then finally block will not execute. But, if System.exit(0) does throw SecurityException then finally block will be executed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 30) Which exception is thrown by the following Java program?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class ExceptionDemo {  \n",
+    "    public static void main(String args[]) {  \n",
+    "       Object x[] = new String[3];  \n",
+    "         x[0] = new Integer(0);  \n",
+    "    }  \n",
+    "}  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "EvalException",
+     "evalue": "java.lang.Integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1m\u001b[31mjava.lang.ArrayStoreException: java.lang.Integer\u001b[0m",
+      "\u001b[1m\u001b[31m\tat ExceptionDemo.main(#19:4)\u001b[0m",
+      "\u001b[1m\u001b[31m\tat .(#20:1)\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "ExceptionDemo a = new ExceptionDemo();\n",
+    "a.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explanation: ArrayStoreException is a runtime exception. Array must contain the same data type elements. It exception is thrown to indicate that an attempt has been made to store the wrong type of object into an array of objects. In other words, if you want to store the integer Object in an Array of String you will get ArrayStoreException."
    ]
   }
  ],
