Add recursive methods for size, get, traverse, and search operations

--- a/LinkedList/LinkedList Introduction.ipynb
+++ b/LinkedList/LinkedList Introduction.ipynb
@@ -34,12 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class Node {\n",
@@ -55,19 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
+      "2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "3\n"
      ]
     }
@@ -111,12 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void printListIterative(Node node) {\n",
@@ -139,12 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void printListRecursive(Node node) {\n",
@@ -169,11 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void printListJavaLinkedList(LinkedList<Integer> list) {\n",
@@ -196,11 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -217,11 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -238,11 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -265,12 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void printListRecursiveReverse(Node node) {\n",
@@ -285,23 +255,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 2 1 "
+      "2 3 1 "
      ]
     }
    ],
    "source": [
     "printListRecursiveReverse(a); // 3 2 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public Node reverseList(Node node) {\n",
+    "    Node prev = null;\n",
+    "    Node current = node;\n",
+    "    Node next = null;\n",
+    "    while (current != null) {\n",
+    "        next = current.next;\n",
+    "        current.next = prev;\n",
+    "        prev = current;\n",
+    "        current = next;\n",
+    "    }\n",
+    "    return prev;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "REPL.$JShell$13$Node@7dc72919"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reverseList(a);"
    ]
   },
   {
@@ -324,11 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public int getLengthIterative(Node node) {\n",
@@ -354,11 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public int getLengthRecursive(Node node) {\n",
@@ -382,11 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public int getLengthJavaLinkedList(LinkedList<Integer> list) {\n",
@@ -406,11 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -430,11 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -454,11 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -495,11 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void addNodeAtEndIterative(Node head, int data) {\n",
@@ -527,11 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tail.next = newNode;"
@@ -582,11 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node addNodeAtEndRecursive(Node node, int data) {\n",
@@ -633,11 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void addNodeAtEndJavaLinkedList(LinkedList<Integer> list, int data) {\n",
@@ -657,11 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -679,11 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -701,11 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -740,11 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node addNodeAtBeginningIterative(Node head, int data) {\n",
@@ -772,11 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node addNodeAtBeginningRecursive(Node head, int data) {\n",
@@ -801,11 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void addNodeAtBeginningJavaLinkedList(LinkedList<Integer> list, int data) {\n",
@@ -825,11 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -864,11 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node addNodeAtIndexIterative(Node head, int data, int index) {\n",
@@ -903,11 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node addNodeAtIndexRecursive(Node node, int data, int index) {\n",
@@ -936,11 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void addNodeAtIndexJavaLinkedList(LinkedList<Integer> list, int data, int index) {\n",
@@ -977,11 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node getNodeAtIndexIterative(Node head, int index) {\n",
@@ -1011,11 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node getNodeAtIndexRecursive(Node node, int index) {\n",
@@ -1042,11 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Integer getNodeAtIndexJavaLinkedList(LinkedList<Integer> list, int index) {\n",
@@ -1083,11 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node removeNodeIterative(Node head, int key) {\n",
@@ -1143,11 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public Node removeNodeRecursive(Node node, int key) {\n",
@@ -1175,11 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void removeNodeJavaLinkedList(LinkedList<Integer> list, int key) {\n",
@@ -1214,11 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class LinkedList {\n",
@@ -1345,7 +1243,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "17.0.10+7-Ubuntu-122.04.1"
   }
