--- a/LinkedList/LinkedList Introduction.ipynb
+++ b/LinkedList/LinkedList Introduction.ipynb
@@ -35,7 +35,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Node {\n",
@@ -52,7 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -110,7 +118,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void printListIterative(Node node) {\n",
@@ -134,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void printListRecursive(Node node) {\n",
@@ -159,7 +175,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void printListJavaLinkedList(LinkedList<Integer> list) {\n",
@@ -182,7 +202,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -199,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -216,7 +244,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -240,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void printListRecursiveReverse(Node node) {\n",
@@ -256,7 +292,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -273,7 +313,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node reverseList(Node node) {\n",
@@ -293,7 +337,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +378,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int getLengthIterative(Node node) {\n",
@@ -356,7 +408,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int getLengthRecursive(Node node) {\n",
@@ -380,7 +436,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int getLengthJavaLinkedList(LinkedList<Integer> list) {\n",
@@ -400,7 +460,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -420,7 +484,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -440,7 +508,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -477,7 +549,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void addNodeAtEndIterative(Node head, int data) {\n",
@@ -505,7 +581,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "tail.next = newNode;"
@@ -556,7 +636,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node addNodeAtEndRecursive(Node node, int data) {\n",
@@ -603,7 +687,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void addNodeAtEndJavaLinkedList(LinkedList<Integer> list, int data) {\n",
@@ -623,7 +711,11 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -641,7 +733,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -659,7 +755,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -694,7 +794,11 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node addNodeAtBeginningIterative(Node head, int data) {\n",
@@ -722,7 +826,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node addNodeAtBeginningRecursive(Node head, int data) {\n",
@@ -747,7 +855,11 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void addNodeAtBeginningJavaLinkedList(LinkedList<Integer> list, int data) {\n",
@@ -767,7 +879,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -802,7 +918,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node addNodeAtIndexIterative(Node head, int data, int index) {\n",
@@ -837,7 +957,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node addNodeAtIndexRecursive(Node node, int data, int index) {\n",
@@ -866,7 +990,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void addNodeAtIndexJavaLinkedList(LinkedList<Integer> list, int data, int index) {\n",
@@ -903,7 +1031,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node getNodeAtIndexIterative(Node head, int index) {\n",
@@ -933,7 +1065,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node getNodeAtIndexRecursive(Node node, int index) {\n",
@@ -960,7 +1096,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Integer getNodeAtIndexJavaLinkedList(LinkedList<Integer> list, int index) {\n",
@@ -997,7 +1137,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node removeNodeIterative(Node head, int key) {\n",
@@ -1053,7 +1197,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public Node removeNodeRecursive(Node node, int key) {\n",
@@ -1081,7 +1229,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public void removeNodeJavaLinkedList(LinkedList<Integer> list, int key) {\n",
@@ -1116,7 +1268,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class LinkedList {\n",
@@ -1231,6 +1387,107 @@
     "\n",
     "This `LinkedList` class includes methods to insert nodes at the beginning, end, and a specific position, delete a node by key, get a node at a specific index, get the size of the list, and print the list. Each node in the list is represented by a `Node` object that contains an integer data and a reference to the next node. The `head` of the list is the first node."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Copy List With Random Pointer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public Node copyRandomLL(Node head) {\n",
+    "    if (head == null) {\n",
+    "        return null;\n",
+    "    }\n",
+    "    Node h = new Node(head.val);\n",
+    "    Node prev = h;\n",
+    "    Node p = head;\n",
+    "    head = head.next;\n",
+    "    Map<Node, Node> hm = new HashMap<>();\n",
+    "    hm.put(p, h);\n",
+    "    int i = 1;\n",
+    "    while (head != null) {\n",
+    "        Node n = new Node(head.val);\n",
+    "        prev.next = n;\n",
+    "        prev = n;\n",
+    "        hm.put(head, n);\n",
+    "        i++;\n",
+    "        head = head.next;\n",
+    "    }\n",
+    "    Node h1 = h;\n",
+    "    while (p != null) {\n",
+    "        if (p.random != null) {\n",
+    "            h1.random = hm.get(p.random);\n",
+    "        }\n",
+    "        h1 = h1.next;\n",
+    "        p = p.next;\n",
+    "    }\n",
+    "    return h;\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sure! Let's go through the code step by step:\n",
+    "\n",
+    "1. The function `copyRandomLL` takes a parameter `head`, which represents the head node of a linked list. It returns a new linked list that is a copy of the original linked list.\n",
+    "\n",
+    "2. The first line of the function checks if the `head` is `null`. If it is, it means the original linked list is empty, so the function returns `null`.\n",
+    "\n",
+    "3. If the `head` is not `null`, a new node `h` is created with the same value as the `head` node. This node will be the head of the copied linked list.\n",
+    "\n",
+    "4. Two more nodes, `prev` and `p`, are created and initialized with the value of `h` and `head` respectively. These nodes will be used to iterate through the original linked list.\n",
+    "\n",
+    "5. The `head` node is then moved to the next node using `head = head.next`. This is done to prepare for the iteration through the original linked list.\n",
+    "\n",
+    "6. A `HashMap` called `hm` is created to store the mapping between nodes of the original linked list and the copied linked list. The key-value pairs in the `HashMap` will be used to set the `random` pointers of the copied linked list.\n",
+    "\n",
+    "7. The `head` node is added as a key and the `h` node is added as a value to the `HashMap` using `hm.put(p, h)`. This establishes the mapping between the first node of the original linked list and the first node of the copied linked list.\n",
+    "\n",
+    "8. A variable `i` is initialized with a value of 1. This variable will be used to keep track of the number of nodes in the original linked list.\n",
+    "\n",
+    "9. The code enters a `while` loop that iterates through the remaining nodes of the original linked list. The loop continues as long as the `head` node is not `null`.\n",
+    "\n",
+    "10. Inside the loop, a new node `n` is created with the same value as the `head` node.\n",
+    "\n",
+    "11. The `next` pointer of the `prev` node is set to the newly created node `n` using `prev.next = n`. This connects the previous node in the copied linked list to the current node.\n",
+    "\n",
+    "12. The `prev` node is updated to the newly created node `n` using `prev = n`. This prepares for the next iteration.\n",
+    "\n",
+    "13. The `head` node is added as a key and the newly created node `n` is added as a value to the `HashMap` using `hm.put(head, n)`. This establishes the mapping between the current node of the original linked list and the current node of the copied linked list.\n",
+    "\n",
+    "14. The variable `i` is incremented by 1 using `i++`. This keeps track of the number of nodes in the original linked list.\n",
+    "\n",
+    "15. The `head` node is moved to the next node using `head = head.next`. This prepares for the next iteration.\n",
+    "\n",
+    "16. After the loop, a new node `h1` is created and initialized with the value of `h`. This node will be used to iterate through the copied linked list.\n",
+    "\n",
+    "17. Another loop is entered that iterates through the nodes of the original linked list using the `p` node.\n",
+    "\n",
+    "18. Inside the loop, it checks if the `random` pointer of the `p` node is not `null`.\n",
+    "\n",
+    "19. If the `random` pointer is not `null`, it retrieves the corresponding copied node from the `HashMap` using `hm.get(p.random)`. This copied node is then assigned as the `random` pointer of the `h1` node.\n",
+    "\n",
+    "20. The `h1` node is moved to the next node using `h1 = h1.next`. This prepares for the next iteration.\n",
+    "\n",
+    "21. The `p` node is moved to the next node using `p = p.next`. This prepares for the next iteration.\n",
+    "\n",
+    "22. Finally, the function returns the head node `h` of the copied linked list.\n",
+    "\n",
+    "This code essentially creates a deep copy of a linked list, including the `random` pointers, by iterating through the original linked list and creating a new node for each node in the original list. It uses a `HashMap` to keep track of the mapping between the nodes of the original and copied linked lists."
+   ]
   }
  ],
  "metadata": {
@@ -1243,7 +1500,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "17.0.10+7-Ubuntu-122.04.1"
   }
