Add reverseArray function to ArrayDS class in ArrayDS.cpp

--- a/Interview QNA/Basics Questions.ipynb
+++ b/Interview QNA/Basics Questions.ipynb
@@ -1920,6 +1920,13 @@
     "\n",
     "In Java, a `char` is a 16-bit unsigned integer. Therefore, its range is from 0 to 2^16 - 1, which is 0 to 65535."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Thank you!**"
+   ]
   }
  ],
  "metadata": {
